# toyoko-inn-alert

./: .gitignore  .pre-commit-config.yaml  BACKEND_SYSTEM.md  DISCORD_FRONTEND_SYSTEM.md  Dockerfile  README.md  SYSTEM.md  docker-compose.yml  pyproject.toml
data/: areas.json  hotels.json
docs/: API_CONTRACT.md  DEPLOYMENT.md
scripts/: extract_hotels.py  manage_keys.py  validate_hotels.py
src/toyoko_inn_alert/: __init__.py  api.py  client.py  data_loader.py  db.py  logging_config.py  main.py  models.py  notifier.py  watcher.py  webhook_payload.py
src/toyoko_inn_alert/templates/: admin_api_keys.html  admin_dashboard.html  admin_notifications.html  base.html
tests/integration/: test_api.py
tests/unit/: test_client.py  test_notifier.py  test_watcher.py
