[project]
name = "toyoko-inn-alert"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michael Yang", email = "michael.kevin@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "ijson>=3.5.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.55.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B", "UP"]
ignore = []

[tool.pyrefly]
# Add pyrefly specific config if needed
